bk_ida/gccida/c3/subreg_regno
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subreg_regno/src/rtlanal.c:3517:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v1.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subreg_regno/src/rtlanal.c:3522:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v1.rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subreg_regno/src/rtlanal.c:3524:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)); 
  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/subreg_regno/src/obj/rtlanal.o] Error 1
